# DesignPatterns

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
Crtp/: CMakeLists.txt
Crtp/src/: Crtp.cpp
DecoratorPattern/: CMakeLists.txt
DecoratorPattern/src/: FollowXTypes.h  IFollowXScheduler.h  test_driver.cpp
PolicyBasedStrategyPattern/: CMakeLists.txt
PolicyBasedStrategyPattern/src/: FollowXTypes.h  IFollowXScheduler.h  TemplateChainTypes.h  test_driver.cpp
pimpl/: CMakeLists.txt
pimpl/src/: Pimpl.cpp  Pimpl.h  Pimpl_test.cpp
strategy_pattern/: CMakeLists.txt
strategy_pattern/src/: Duck.cpp  Duck.h  Duck_test.cpp  IDisplayBehaviour.cpp  IDisplayBehaviour.h  IFlyBehaviour.cpp  IFlyBehaviour.h  SimpleDisplay.cpp  SimpleDisplay.h  SimpleFly.cpp  SimpleFly.h  driver.cpp
